# nginx_single

./: CMakeLists.txt  ngx_auto_config.h  ngx_modules.c
core/: nginx.c  nginx.h  ngx_array.c  ngx_array.h  ngx_buf.c  ngx_buf.h  ngx_conf_file.c  ngx_conf_file.h  ngx_config.h  ngx_connection.c  ngx_connection.h  ngx_core.h  ngx_cpuinfo.c  ngx_crc.h  ngx_crc32.c  ngx_crc32.h  ngx_crypt.c  ngx_crypt.h  ngx_cycle.c  ngx_cycle.h  ngx_file.c  ngx_file.h  ngx_hash.c  ngx_hash.h  ngx_inet.c  ngx_inet.h  ngx_list.c  ngx_list.h  ngx_log.c  ngx_log.h  ngx_md5.c  ngx_md5.h  ngx_module.c  ngx_module.h  ngx_murmurhash.c  ngx_murmurhash.h  ngx_open_file_cache.c  ngx_open_file_cache.h  ngx_output_chain.c  ngx_palloc.c  (+34 more)
event/: ngx_event.c  ngx_event.h  ngx_event_accept.c  ngx_event_acceptex.c  ngx_event_connect.c  ngx_event_connect.h  ngx_event_connectex.c  ngx_event_openssl.c  ngx_event_openssl.h  ngx_event_openssl_stapling.c  ngx_event_pipe.c  ngx_event_pipe.h  ngx_event_posted.c  ngx_event_posted.h  ngx_event_timer.c  ngx_event_timer.h  ngx_event_udp.c
http/: ngx_http.c  ngx_http.h  ngx_http_cache.h  ngx_http_config.h  ngx_http_copy_filter_module.c  ngx_http_core_module.c  ngx_http_core_module.h  ngx_http_file_cache.c  ngx_http_header_filter_module.c  ngx_http_parse.c  ngx_http_postpone_filter_module.c  ngx_http_request.c  ngx_http_request.h  ngx_http_request_body.c  ngx_http_script.c  ngx_http_script.h  ngx_http_special_response.c  ngx_http_upstream.c  ngx_http_upstream.h  ngx_http_upstream_round_robin.c  ngx_http_upstream_round_robin.h  ngx_http_variables.c  ngx_http_variables.h  ngx_http_write_filter_module.c
mail/: ngx_mail.c  ngx_mail.h  ngx_mail_auth_http_module.c  ngx_mail_core_module.c  ngx_mail_handler.c  ngx_mail_imap_handler.c  ngx_mail_imap_module.c  (+11 more)
(+210 files in other folders)
